# VintedAdvancedMonitorNative

./: CMakeLists.txt  build.sh  imgui.ini
data/: vintedcolors.json
src/: main.cpp
src/private/: menu.cpp  vinteddata.cpp  vintedresearch.cpp  vintedrest.cpp  window.cpp
src/public/: interfont.h  menuconstants.h  vinted.h  vintedconstants.h  vinteddata.h  vinteddatastructrures.h  vintedlogger.h  vintedresearch.h  vintedrest.h  vintedwindow.h  window.h
